--- a/angular.json
+++ b/angular.json
@@ -19,11 +19,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public",
-                "output": "/"
-              }
+            "src/assets" 
             ],
             "styles": ["src/styles.css"],
             "scripts": []
@@ -73,11 +69,7 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public",
-                "output": "/"
-              }
+             "src/assets" 
             ],
             "styles": ["src/styles.css"],
             "scripts": []
