--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@fhevm-sdk/core": "^0.1.6",
-    "@zama-fhe/relayer-sdk": "^0.2.0",
+    "@zama-fhe/relayer-sdk": "^0.3.0-5",
     "buffer": "^6.0.3",
     "ethers": "^6.13.0",
     "fhevm-sdk-universal": "^0.1.0",
